# pdftools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish-pypi.yml
src/pdftools/detectors/: __init__.py  xspd.py
tests/: conftest.py
tests/test_detectors.py/: test_xspd.py
